[package]
name = "photo-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
actix-files = "0.6"
thiserror = "1.0"
serde = {version="1.0", features=["derive"]}
lazy_static = "1.4"
image = "0.24"
