[package]
name = "photo-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
actix-files = "0.6"
#error handling
thiserror = "1.0"
#serilization
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
#image manipulation, encoding/decoding
image = "0.24.7"
#rendering text to image
rusttype = "0.9.3"
#password encryption
argon2 = "0.5.2"
