[package]
name = "photo-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
cookie = "0.16"
actix-files = "0.6"
actix-multipart="0.6"
tokio-stream = "0.1"
#error handling
thiserror = "1.0"
#serilization
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
#image manipulation, encoding/decoding
image = "0.24.7"
#rendering text to image
rusttype = "0.9.3"
#passwords and encryption
argon2 = "0.5.2"
jsonwebtoken = "9"
#database
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
#time
chrono = "0.4"


